<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/topcenter"
    android:orientation="vertical" >

    <Button
        android:id="@+id/back"
        style="@style/backbutton"
        android:layout_marginLeft="5dp" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <TextView
            android:id="@+id/nobus"
            style="@style/story"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/hello_world" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ss_prompt1"
        style="@style/story"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_1" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ss_time1"
            style="@style/time"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/viewCur"
            style="@style/schedulebutton"
            android:layout_toRightOf="@+id/ss_time1" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ss_prompt2"
        style="@style/story"
        android:text="@string/prompt_2" />

    <TextView
        android:id="@+id/ss_service"
        style="@style/story"
        android:layout_marginTop="14dp"
        android:text="@string/app_name" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ss_time2"
            style="@style/time"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/viewExtra"
            style="@style/schedulebutton"
            android:layout_toRightOf="@+id/ss_time2" />
    </RelativeLayout>

    <TextView
        android:id="@+id/prompt_3"
        style="@style/story"
        android:text="@string/prompt_3" />

</LinearLayout>